feat :  제작안내 section2 완료하다

--- a/production-guide.html
+++ b/production-guide.html
@@ -86,73 +86,77 @@
 
         <div class="steps-list">
           <div class="step-item">
-            <div class="step-icon">
-              <img
-                src="./img/production-guide/icon-counsel.png"
-                alt="상담 아이콘"
-              />
-            </div>
-            <div class="step-content">
+            <div class="step-header">
+              <div class="step-icon">
+                <img
+                  src="./img/production-guide/icon-counsel.png"
+                  alt="상담 아이콘"
+                />
+              </div>
               <div class="step-number">01</div>
               <h4>상담</h4>
-              <p>제작을 원하시는 방향과 예산을 협의 합니다.</p>
+            </div>
+
+            <div class="step-content">
+              <ul>
+                <li>제작을 원하시는 방향과 예산을 협의 합니다.</li>
+              </ul>
             </div>
           </div>
 
           <div class="step-item">
-            <div class="step-icon">
-              <img
-                src="./img/production-guide/icon-file.png"
-                alt="계약 아이콘"
-              />
-            </div>
-            <div class="step-content">
+            <div class="step-header">
+              <div class="step-icon">
+                <img
+                  src="./img/production-guide/icon-contract.png"
+                  alt="계약 아이콘"
+                />
+              </div>
               <div class="step-number">02</div>
               <h4>계약</h4>
-              <p>협의된 내용으로 계약서를 작성하고 제작 준비를 합니다.</p>
+            </div>
+            <div class="step-content">
+              <ul>
+                <li>협의된 내용으로 계약서를 작성하고 제작 준비를 합니다.</li>
+              </ul>
+              <p></p>
             </div>
           </div>
 
           <div class="step-item">
-            <div class="step-icon">
-              <img
-                src="./img/production-guide/icon-produce.png"
-                alt="제작 아이콘"
-              />
-            </div>
-            <div class="step-content">
+            <div class="step-header">
+              <div class="step-icon">
+                <img
+                  src="./img/production-guide/icon-produce.png"
+                  alt="제작 아이콘"
+                />
+              </div>
               <div class="step-number">03</div>
               <h4>제작</h4>
-              <div class="sub-steps">
-                <div class="sub-step">
-                  <strong>기획</strong>
-                  <span
-                    >원하시는 메뉴나 내용을 정리하여 보여드리고 홈페이지의 전체
-                    내용을 확정 합니다.</span
-                  >
-                </div>
-                <div class="sub-step">
-                  <strong>디자인</strong>
-                  <span
-                    >사찰과 홈페이지 내용과 어울리는 디자인으로 시안을 작업하고
-                    협의 후 본 디자인 작업을 합니다.</span
-                  >
-                </div>
-                <div class="sub-step">
-                  <strong>개발</strong>
-                  <span
-                    >홈페이지 접속 최적화를 위해 반응형 홈페이지 형태로 개발
-                    작업을 합니다.</span
-                  >
-                </div>
-                <div class="sub-step">
-                  <strong>완료</strong>
-                  <span
-                    >홈페이지에 대한 최종 테스트를 완료 한 후 제작을 완료
-                    합니다.</span
-                  >
-                </div>
-              </div>
+            </div>
+
+            <div class="step-content">
+              <ul>
+                <li>
+                  기획 : 원하시는 메뉴나 내용을 정리하여 보여드리고 홈페이지의
+                  전체 내용을 확정 합니다.
+                </li>
+
+                <li>
+                  디자인 : 사찰과 홈페이지 내용과 어울리는 디자인으로 시안을
+                  작업하고 협의 후 본 디자인 작업을 합니다.
+                </li>
+
+                <li>
+                  개발 : 홈페이지 접속 최적화를 위해 반응형 홈페이지 형태로 개발
+                  작업을 합니다.
+                </li>
+
+                <li>
+                  완료 : 홈페이지에 대한 최종 테스트를 완료 한 후 제작을 완료
+                  합니다.
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -160,9 +164,8 @@
         <!-- 제작 기간 및 비용 안내 -->
         <div class="timeline-note">
           <p>
-            <span class="asterisk">*</span>
-            일반적인 홈페이지 제작 시 평균 45일의 기간 이내에 홈페이지 제작을
-            완료 합니다.<br />
+            ※ 일반적인 홈페이지 제작 시 평균 45일의 기간 이내에 홈페이지 제작을
+            완료 합니다.<br class="pc-only" />
             전체 페이지 수나 원하시는 기능에 따라 예산이 다르게 책정되기 때문에
             자세한 상담은 아래 연락처로 연락 부탁 드립니다.
           </p>
