feat : 제작안내 section3 완료하다

--- a/production-guide.html
+++ b/production-guide.html
@@ -175,15 +175,17 @@
       <!-- 문의 섹션 -->
       <section class="inquiry-section">
         <div class="inquiry-box">
-          <div class="inquiry-header">
+          <a href="#" class="inquiry-header">
             <img src="./img/icon-mail.png" alt="문의 아이콘" />
             <h3>홈페이지 제작문의</h3>
             <img src="./img/icon-right-arrow-brown-24x24.png" alt="바로가기" />
-          </div>
+          </a>
           <div class="inquiry-content">
             <p>
-              대표 전화 번호 02-6748-5212 / 수비라 상담 내선 (1)번, 홈페이지
-              제작 내선 (2)번
+              대표 전화 번호 <a href="tel:0267485212">02-6748-5212</a> /<br
+                class="mo-only"
+              />
+              수비라 상담 내선 (1)번, 홈페이지 제작 내선 (2)번
             </p>
           </div>
         </div>
