feat  : pdf 다운로드 코드 추가하다

--- a/production-guide.html
+++ b/production-guide.html
@@ -197,5 +197,6 @@
     <!-- JavaScript -->
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
+    <script src="./js/download-pdf.js"></script>
   </body>
 </html>
