--- a/src/header.html
+++ b/src/header.html
@@ -275,7 +275,7 @@
           <a href="#">문의 하기</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
-              <li><a href="#">문의하기</a></li>
+              <li><a href="./contact-us.html">문의하기</a></li>
             </ul>
           </div>
         </li>
@@ -336,7 +336,7 @@
             <a href="#">문의 하기</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
-                <li><a href="#">문의하기</a></li>
+                <li><a href="./contact-us.html">문의하기</a></li>
               </ul>
             </div>
           </li>
