--- a/contact-us.html
+++ b/contact-us.html
@@ -60,157 +60,197 @@
 
         <form class="contact-form" action="#" method="post">
           <!-- 문의 구분 -->
-          <div class="form-row form-row--inline bordered">
-            <label class="form-label">문의 구분</label>
-            <div class="radio-group">
-              <input
-                id="subira"
-                type="radio"
-                name="category"
-                value="subira"
-                checked
-              />
-              <label class="radio" for="subira">
-                <span>수비라</span>
-              </label>
-              <input
-                id="homepage"
-                type="radio"
-                name="category"
-                value="homepage"
-              />
-              <label class="radio" for="homepage">
-                <span>홈페이지</span>
-              </label>
+          <div class="form-row bordered-top bordered-bottom">
+            <label class="form-label required">문의 구분</label>
+
+            <div class="form-content">
+              <div class="radio-group">
+                <div class="radio-item">
+                  <input
+                    id="subira"
+                    type="radio"
+                    name="category"
+                    value="subira"
+                    class="blind"
+                    checked
+                  />
+                  <label class="radio" for="subira">
+                    <span>수비라</span>
+                  </label>
+                </div>
+
+                <div class="radio-item">
+                  <input
+                    id="homepage"
+                    type="radio"
+                    name="category"
+                    value="homepage"
+                    class="blind"
+                  />
+                  <label class="radio" for="homepage">
+                    <span>홈페이지</span>
+                  </label>
+                </div>
+              </div>
             </div>
           </div>
 
           <!-- 이름/사찰명 -->
-          <div class="form-row">
+          <div class="form-row bordered-bottom">
             <label for="name" class="form-label required">이름(사찰명)</label>
-            <input id="name" name="name" type="text" placeholder="직접입력" />
+            <div class="form-content">
+              <input
+                id="name"
+                name="name"
+                type="text"
+                placeholder="이름을 입력해주세요"
+              />
+            </div>
           </div>
 
-          <div class="form-row">
+          <div class="form-row bordered-bottom">
             <label for="temple" class="form-label">사찰명</label>
-            <input
-              id="temple"
-              name="temple"
-              type="text"
-              placeholder="직접입력"
-            />
+            <div class="form-content">
+              <input
+                id="temple"
+                name="temple"
+                type="text"
+                placeholder="사찰명을 입력해주세요"
+              />
+            </div>
           </div>
 
-          <div class="form-row">
+          <div class="form-row bordered-bottom">
             <label for="subject" class="form-label required">제목</label>
-            <input
-              id="subject"
-              name="subject"
-              type="text"
-              placeholder="직접입력"
-            />
+            <div class="form-content">
+              <input
+                id="subject"
+                name="subject"
+                type="text"
+                placeholder="1인 견적가를 입력해 주세요."
+              />
+            </div>
           </div>
 
           <!-- 연락처 -->
-          <div class="form-row">
+          <div class="form-row bordered-bottom">
             <label class="form-label required">연락처</label>
-            <div class="phone-group">
-              <select aria-label="전화 앞자리">
-                <option value="010" selected>010</option>
-                <option value="011">011</option>
-                <option value="016">016</option>
-                <option value="017">017</option>
-                <option value="019">019</option>
-                <option value="02">02</option>
-                <option value="031">031</option>
-                <option value="032">032</option>
-                <option value="033">033</option>
-                <option value="041">041</option>
-                <option value="042">042</option>
-                <option value="043">043</option>
-                <option value="044">044</option>
-                <option value="062">062</option>
-                <option value="061">061</option>
-                <option value="054">054</option>
-                <option value="055">055</option>
-              </select>
-              <input
-                type="text"
-                inputmode="numeric"
-                maxlength="4"
-                aria-label="중간번호"
-              />
-              <input
-                type="text"
-                inputmode="numeric"
-                maxlength="4"
-                aria-label="끝번호"
-              />
+
+            <div class="form-content">
+              <div class="phone-group">
+                <select aria-label="전화 앞자리" class="select">
+                  <option value="010" selected>010</option>
+                  <option value="011">011</option>
+                  <option value="016">016</option>
+                  <option value="017">017</option>
+                  <option value="019">019</option>
+                  <option value="02">02</option>
+                  <option value="031">031</option>
+                  <option value="032">032</option>
+                  <option value="033">033</option>
+                  <option value="041">041</option>
+                  <option value="042">042</option>
+                  <option value="043">043</option>
+                  <option value="044">044</option>
+                  <option value="062">062</option>
+                  <option value="061">061</option>
+                  <option value="054">054</option>
+                  <option value="055">055</option>
+                </select>
+                <span class="hyphen">-</span>
+                <input
+                  type="text"
+                  inputmode="numeric"
+                  maxlength="4"
+                  aria-label="중간번호"
+                />
+                <span class="hyphen">-</span>
+                <input
+                  type="text"
+                  inputmode="numeric"
+                  maxlength="4"
+                  aria-label="끝번호"
+                />
+              </div>
             </div>
           </div>
 
           <!-- 이메일 -->
-          <div class="form-row">
-            <label for="email" class="form-label required">이메일</label>
-            <div class="email-group">
-              <input
-                id="email"
-                type="text"
-                placeholder="이메일을 입력해 주세요"
-              />
-              <span class="at">@</span>
-              <input type="text" placeholder="직접입력" />
-              <select class="domain-select" aria-label="도메인 선택">
-                <option value="">직접 입력</option>
-                <option>naver.com</option>
-                <option>gmail.com</option>
-                <option>hanmail.net</option>
-              </select>
+          <div class="form-row bordered-bottom">
+            <label for="email" class="form-label">이메일</label>
+            <div class="form-content">
+              <div class="email-group">
+                <input
+                  id="email"
+                  type="text"
+                  placeholder="이메일을 입력해 주세요."
+                />
+                <span class="at">@</span>
+                <input type="text" placeholder="직접입력" />
+                <select class="select" aria-label="도메인 선택">
+                  <option value="">직접 입력</option>
+                  <option>naver.com</option>
+                  <option>gmail.com</option>
+                  <option>hanmail.net</option>
+                </select>
+              </div>
             </div>
           </div>
 
           <!-- 내용 -->
-          <div class="form-row">
-            <label for="content" class="form-label">내용</label>
-            <textarea
-              id="content"
-              rows="8"
-              placeholder="상담 진행 시, 참고할 수 있도록 확인하는 내용을 작성해 주세요."
-            ></textarea>
+          <div class="form-row bordered-bottom">
+            <label for="content" class="form-label required h-100">내용</label>
+            <div class="form-content">
+              <textarea
+                id="content"
+                rows="8"
+                placeholder="상담 진행 시, 참고할 수 있도록 희망하는 내용을 작성해주세요."
+              ></textarea>
+            </div>
           </div>
 
           <!-- 개인정보 동의 -->
-          <div class="privacy-box">
-            <h4>개인정보 수집 및 이용 동의 안내 (필수)</h4>
-            <ol>
-              <li>개인정보의 수집 목적 : 맞춤형 견적안내 및 상담</li>
-              <li>수집하는 개인정보의 항목 : 이름, 연락처, 이메일</li>
-              <li>
-                개인정보 보유 및 이용 기간 : 수집 목적 달성 후 3개월 보관 후
-                파기
-              </li>
-              <li>
-                동의 거부권 및 거부 시 불이익 사항 : 고객님은 동의 거부하실 수
-                있으며, 거부 시 정확한 견적안내 및 상담이 제한될 수 있습니다.
-              </li>
-            </ol>
+          <div class="form-row bordered-bottom">
+            <label for="content" class="form-label required h-100"
+              >개인정보 수집 및<br class="pc-only" />이용 동의 안내
+              (필수)</label
+            >
+            <div class="form-content">
+              <div class="privacy-box">
+                <ol>
+                  <li>개인정보의 수집 목적 : 맞춤여행 견적안내 및 상담</li>
+                  <li>수집하는 개인정보의 항목 : 이름, 연락처, 이메일</li>
+                  <li>
+                    개인정보 보유 및 이용 기간 : 수집 목적 달성 후 3개월 보관 후
+                    파기
+                  </li>
+                  <li>
+                    동의 거부권 및 거부 시 불이익 사항 : 고객님은 동의를
+                    거부하실 수 있으며, 거부 시 맞춤여행 견적안내 및 상담이
+                    불가함을 안내 드립니다.
+                  </li>
+                </ol>
 
-            <div class="radio-group agree">
-              <label class="radio"
-                ><input type="radio" name="agree" checked /><span
-                  >동의합니다.</span
-                ></label
-              >
-              <label class="radio"
-                ><input type="radio" name="agree" /><span
-                  >동의하지 않습니다.</span
-                ></label
-              >
+                <p>위 개인정보 수집 및 이용에 동의하십니까?</p>
+
+                <div class="radio-group agree">
+                  <label class="radio"
+                    ><input type="radio" name="agree" checked /><span
+                      >동의합니다.</span
+                    ></label
+                  >
+                  <label class="radio"
+                    ><input type="radio" name="agree" /><span
+                      >동의하지 않습니다.</span
+                    ></label
+                  >
+                </div>
+              </div>
             </div>
           </div>
 
           <p class="notice">
-            업무 처리 시간은 평일 09:00 ~ 18:00로 답변은 문의 내용 및 성격에
+            ※ 업무 처리 시간은 평일 09:00 ~ 18:00로 답변은 문의 내용 및 성격에
             따라 지연될 수 있습니다.
           </p>
 
