--- a/contact-us.html
+++ b/contact-us.html
@@ -211,39 +211,54 @@
 
           <!-- 개인정보 동의 -->
           <div class="form-row bordered-bottom">
-            <label for="content" class="form-label required h-100"
+            <label for="content" class="form-label h-100"
               >개인정보 수집 및<br class="pc-only" />이용 동의 안내
-              (필수)</label
-            >
+            </label>
             <div class="form-content">
               <div class="privacy-box">
-                <ol>
-                  <li>개인정보의 수집 목적 : 맞춤여행 견적안내 및 상담</li>
-                  <li>수집하는 개인정보의 항목 : 이름, 연락처, 이메일</li>
+                <ul>
+                  <li>1. 개인정보의 수집 목적 : 맞춤여행 견적안내 및 상담</li>
+                  <li>2. 수집하는 개인정보의 항목 : 이름, 연락처, 이메일</li>
                   <li>
-                    개인정보 보유 및 이용 기간 : 수집 목적 달성 후 3개월 보관 후
-                    파기
+                    3. 개인정보 보유 및 이용 기간 : 수집 목적 달성 후 3개월 보관
+                    후 파기
                   </li>
                   <li>
-                    동의 거부권 및 거부 시 불이익 사항 : 고객님은 동의를
+                    4. 동의 거부권 및 거부 시 불이익 사항 : 고객님은 동의를
                     거부하실 수 있으며, 거부 시 맞춤여행 견적안내 및 상담이
                     불가함을 안내 드립니다.
                   </li>
-                </ol>
+                </ul>
 
                 <p>위 개인정보 수집 및 이용에 동의하십니까?</p>
 
                 <div class="radio-group agree">
-                  <label class="radio"
-                    ><input type="radio" name="agree" checked /><span
-                      >동의합니다.</span
-                    ></label
-                  >
-                  <label class="radio"
-                    ><input type="radio" name="agree" /><span
-                      >동의하지 않습니다.</span
-                    ></label
-                  >
+                  <div class="radio-item">
+                    <input
+                      id="agree-yes"
+                      type="radio"
+                      name="agree"
+                      value="agree-yes"
+                      class="blind"
+                      checked
+                    />
+                    <label class="radio" for="agree-yes">
+                      <span>동의합니다.</span>
+                    </label>
+                  </div>
+
+                  <div class="radio-item">
+                    <input
+                      id="agree-no"
+                      type="radio"
+                      name="agree"
+                      value="agree-no"
+                      class="blind"
+                    />
+                    <label class="radio" for="agree-no">
+                      <span>동의하지 않습니다.</span>
+                    </label>
+                  </div>
                 </div>
               </div>
             </div>
@@ -256,8 +271,8 @@
 
           <!-- 버튼 -->
           <div class="form-actions">
-            <button type="button" class="btn btn--secondary">취소</button>
-            <button type="submit" class="btn btn--primary">등록</button>
+            <button type="button" class="btn btn--primary">취소</button>
+            <button type="submit" class="btn btn--secondary">등록</button>
           </div>
         </form>
       </section>
