style : 더보기 버튼 화살표 css 속성 수정하다

--- a/index.html
+++ b/index.html
@@ -390,7 +390,9 @@
         </ul>
 
         <div class="portfolio-btn-area">
-          <a class="portfolio-btn"> 더보기 </a>
+          <a class="portfolio-btn">
+            더보기 <img src="./img/index/icon-more.png" alt="더보기" />
+          </a>
         </div>
       </section>
 
