--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="swiper-slide" style="background-color: #fffadd">
               <div>
                 <img
-                  src="./img/print/print-cate1-item1.png"
+                  src="./img/output/output-cate1-item1.png"
                   alt="연등 꼬리표 노란색"
                 />
                 <div class="print-cate-text">
@@ -213,7 +213,7 @@
             <div class="swiper-slide" style="background-color: #fff2f7">
               <div>
                 <img
-                  src="./img/print/print-cate1-item2.png"
+                  src="./img/output/output-cate1-item2.png"
                   alt="연등 꼬리표 분홍색"
                 />
                 <div class="print-cate-text">
@@ -229,7 +229,7 @@
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
                 <img
-                  src="./img/print/print-cate1-item3.png"
+                  src="./img/output/output-cate1-item3.png"
                   alt="연등 꼬리표 흑백"
                 />
                 <div class="print-cate-text">
@@ -245,7 +245,7 @@
             <div class="swiper-slide" style="background-color: #cdebd9">
               <div>
                 <img
-                  src="./img/print/print-cate2-item1.png"
+                  src="./img/output/output-cate2-item1.png"
                   alt="위패 극락왕생 컬러"
                 />
                 <div class="print-cate-text">
@@ -261,7 +261,7 @@
             <div class="swiper-slide" style="background-color: #cdebd9">
               <div>
                 <img
-                  src="./img/print/print-cate2-item2.png"
+                  src="./img/output/output-cate2-item2.png"
                   alt="위패 극락왕생 흑백"
                 />
                 <div class="print-cate-text">
@@ -275,7 +275,7 @@
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
                 <img
-                  src="./img/print/print-cate3-item1.png"
+                  src="./img/output/output-cate3-item1.png"
                   alt="기부금 영수증"
                 />
                 <div class="print-cate-text">
@@ -288,7 +288,7 @@
             <!-- 축원문 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
-                <img src="./img/print/print-cate3-item2.png" alt="축원문" />
+                <img src="./img/output/output-cate3-item2.png" alt="축원문" />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">축원문</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
@@ -299,7 +299,7 @@
             <!-- 천혼문 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
-                <img src="./img/print/print-cate3-item3.png" alt="천혼문" />
+                <img src="./img/output/output-cate3-item3.png" alt="천혼문" />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">천혼문</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
@@ -310,7 +310,10 @@
             <!-- 축원+천혼 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
-                <img src="./img/print/print-cate3-item4.png" alt="축원+천혼" />
+                <img
+                  src="./img/output/output-cate3-item4.png"
+                  alt="축원+천혼"
+                />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">축원+천혼</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
@@ -322,7 +325,7 @@
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
                 <img
-                  src="./img/print/print-cate3-item5.png"
+                  src="./img/output/output-cate3-item5.png"
                   alt="영가 천혼문"
                 />
                 <div class="print-cate-text">
@@ -335,7 +338,10 @@
             <!-- 제사 위패 -->
             <div class="swiper-slide" style="background-color: #f2f2f2">
               <div>
-                <img src="./img/print/print-cate3-item6.png" alt="제사 위패" />
+                <img
+                  src="./img/output/output-cate3-item6.png"
+                  alt="제사 위패"
+                />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">제사 위패</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
@@ -418,7 +424,7 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/print-swiper.js"></script>
+    <script src="./js/output-swiper.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
   </body>
