feat : 출력물 페이지 pc 수정하다

--- a/output.html
+++ b/output.html
@@ -45,6 +45,120 @@
         출력물 소개
         <span class="breadcrumb">출력물 소개 > 연등꼬리표</span>
       </h2>
+
+      <section class="output-section">
+        <!-- 탭 메뉴 -->
+        <ul class="output-tab-list">
+          <li class="output-tab-item item1 active" id="output-tab-item1">
+            <span>연등꼬리표</span>
+          </li>
+          <li class="output-tab-item item2" id="output-tab-item2">
+            <span>위패<span>
+          </li>
+          <li class="output-tab-item item3" id="output-tab-item3">
+            <span>출력물</span>
+          </li>
+        </ul>
+
+        <!-- 연등꼬리표 -->
+        <div class="output-content item1">
+          <div style="background-color: #fffadd">
+            <img src="./img/output/output-cate1-item1.png" alt="연등꼬리표" />
+            <div class="label">
+              <p>연등 꼬리표 노란색<br>(양면)</p>
+              <p>폭 19cm x 높이 22.4cm</p>
+            </div>
+          </div>
+
+          <div style="background-color: #fff2f7">
+            <img src="./img/output/output-cate1-item2.png" alt="연등꼬리표" />
+            <div class="label">
+              <p>연등 꼬리표 분홍색<br>(양면)</p>
+              <p>폭 19cm x 높이 22.4cm</p>
+            </div>
+          </div>
+
+          <div style="background-color: #f2f2f2">
+            <img src="./img/output/output-cate1-item3.png" alt="연등꼬리표" />
+            <div class="label">
+              <p>연등 꼬리표 흑색<br>(양면)</p>
+              <p>폭 19cm x 높이 22.4cm</p>
+            </div>
+          </div>
+
+          <div style="border-radius: 20px; border: 1px solid #ccc">
+            <img src="./img/output/output-cate1-item4.png" alt="연등꼬리표" />
+            <div class="label">
+              <p>연등 꼬리표 비닐 커버</p>
+              <p>폭 19cm x 높이 22.4cm</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 위패 -->
+        <div class="output-content item2">
+          <div style="background-color: #CDEBD9">
+            <img src="./img/output/output-cate2-item1.png" alt="위패" />
+            <div class="label">
+              <p>위패 극락왕생 컬러<br />(단면)</p>
+              <p>폭 6cm x 높이 14.4cm</p>
+            </div>
+          </div>
+
+          <div style="background-color: #F2F2F2">
+            <img src="./img/output/output-cate2-item2.png" alt="위패" />
+            <div class="label">
+              <p>위패 극락왕생 흑백<br />(단면)</p>
+              <p>폭 6cm x 높이 14.4cm</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 출력물 -->
+        <div class="output-content item3">
+          <div>
+            <img src="./img/output/output-cate3-item1.png" alt="출력물" />
+            <div class="label">
+              <p>기부금 영수증</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./img/output/output-cate3-item2.png" alt="출력물" />
+            <div class="label">
+              <p>축원문</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./img/output/output-cate3-item3.png" alt="출력물" />
+            <div class="label">
+              <p>천혼문</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./img/output/output-cate3-item4.png" alt="출력물" />
+            <div class="label">
+              <p>축원 + 천혼</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./img/output/output-cate3-item5.png" alt="출력물" />
+            <div class="label">
+              <p>영가 천혼문</p>
+            </div>
+          </div>
+
+          <div>
+            <img src="./img/output/output-cate3-item6.png" alt="출력물" />
+            <div class="label">
+              <p>제사 위패</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer id="footer"></footer>
