feat : 탭 클릭 js 추가하다

--- a/output.html
+++ b/output.html
@@ -61,7 +61,7 @@
         </ul>
 
         <!-- 연등꼬리표 -->
-        <div class="output-content item1">
+        <div class="output-content item1 active">
           <div style="background-color: #fffadd">
             <img src="./img/output/output-cate1-item1.png" alt="연등꼬리표" />
             <div class="label">
@@ -166,5 +166,6 @@
     <!-- JavaScript -->
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
+    <script src="./js/output.js"></script>
   </body>
 </html>
