feat : 출력물 모달창 추가하다

--- a/output.html
+++ b/output.html
@@ -49,13 +49,13 @@
       <section class="output-section">
         <!-- 탭 메뉴 -->
         <ul class="output-tab-list">
-          <li class="output-tab-item item1 active" id="output-tab-item1">
+          <li class="output-tab-item item1 active">
             <span>연등꼬리표</span>
           </li>
-          <li class="output-tab-item item2" id="output-tab-item2">
+          <li class="output-tab-item item2"">
             <span>위패<span>
           </li>
-          <li class="output-tab-item item3" id="output-tab-item3">
+          <li class="output-tab-item item3">
             <span>출력물</span>
           </li>
         </ul>
@@ -68,6 +68,23 @@
               <p>연등 꼬리표 노란색<br>(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
+
+            <dialog class="modal">
+              <h3>연등꼬리표</h3>
+              <p>
+                연등 양면 꼬리표 양식입니다.
+                한 장을 찍어낸 다음 접어서 양면으로 보실 수 있는 연등꼬리표로 높은 법당을 갖고 계신 사찰에 유용할 것입니다.
+                가족등, 개인등을 찍을 수 있습니다.
+                ※ 1박스 : 500매
+                ※ 사이즈 : 폭 19cm x 높이 22.4cm
+              </p>
+
+                <div class="img-content">
+                  <img src="./img/output/modal/modal-content-1-1.png" alt="연등꼬리표" />
+                  <img src="./img/output/modal/modal-content-1-2.png" alt="연등꼬리표" />
+                  <img src="./img/output/modal/modal-content-1-3.png" alt="연등꼬리표" />
+                </div>
+            </dialog>
           </div>
 
           <div style="background-color: #fff2f7">
