--- a/output.html
+++ b/output.html
@@ -52,8 +52,8 @@
           <li class="output-tab-item item1 active">
             <span>연등꼬리표</span>
           </li>
-          <li class="output-tab-item item2"">
-            <span>위패<span>
+          <li class="output-tab-item item2">
+            <span>위패</span>
           </li>
           <li class="output-tab-item item3">
             <span>출력물</span>
@@ -65,32 +65,40 @@
           <div style="background-color: #fffadd">
             <img src="./img/output/output-cate1-item1.png" alt="연등꼬리표" />
             <div class="label">
-              <p>연등 꼬리표 노란색<br>(양면)</p>
+              <p>연등 꼬리표 노란색<br />(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
 
             <dialog class="modal">
               <h3>연등꼬리표</h3>
               <p>
-                연등 양면 꼬리표 양식입니다.
-                한 장을 찍어낸 다음 접어서 양면으로 보실 수 있는 연등꼬리표로 높은 법당을 갖고 계신 사찰에 유용할 것입니다.
-                가족등, 개인등을 찍을 수 있습니다.
-                ※ 1박스 : 500매
-                ※ 사이즈 : 폭 19cm x 높이 22.4cm
+                연등 양면 꼬리표 양식입니다. 한 장을 찍어낸 다음 접어서 양면으로
+                보실 수 있는 연등꼬리표로 높은 법당을 갖고 계신 사찰에 유용할
+                것입니다. 가족등, 개인등을 찍을 수 있습니다. ※ 1박스 : 500매 ※
+                사이즈 : 폭 19cm x 높이 22.4cm
               </p>
 
-                <div class="img-content">
-                  <img src="./img/output/modal/modal-content-1-1.png" alt="연등꼬리표" />
-                  <img src="./img/output/modal/modal-content-1-2.png" alt="연등꼬리표" />
-                  <img src="./img/output/modal/modal-content-1-3.png" alt="연등꼬리표" />
-                </div>
+              <div class="img-content">
+                <img
+                  src="./img/output/modal/modal-content-1-1.png"
+                  alt="연등꼬리표"
+                />
+                <img
+                  src="./img/output/modal/modal-content-1-2.png"
+                  alt="연등꼬리표"
+                />
+                <img
+                  src="./img/output/modal/modal-content-1-3.png"
+                  alt="연등꼬리표"
+                />
+              </div>
             </dialog>
           </div>
 
           <div style="background-color: #fff2f7">
             <img src="./img/output/output-cate1-item2.png" alt="연등꼬리표" />
             <div class="label">
-              <p>연등 꼬리표 분홍색<br>(양면)</p>
+              <p>연등 꼬리표 분홍색<br />(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
           </div>
@@ -98,7 +106,7 @@
           <div style="background-color: #f2f2f2">
             <img src="./img/output/output-cate1-item3.png" alt="연등꼬리표" />
             <div class="label">
-              <p>연등 꼬리표 흑색<br>(양면)</p>
+              <p>연등 꼬리표 흑색<br />(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
           </div>
@@ -114,7 +122,7 @@
 
         <!-- 위패 -->
         <div class="output-content item2">
-          <div style="background-color: #CDEBD9">
+          <div style="background-color: #cdebd9">
             <img src="./img/output/output-cate2-item1.png" alt="위패" />
             <div class="label">
               <p>위패 극락왕생 컬러<br />(단면)</p>
@@ -122,7 +130,7 @@
             </div>
           </div>
 
-          <div style="background-color: #F2F2F2">
+          <div style="background-color: #f2f2f2">
             <img src="./img/output/output-cate2-item2.png" alt="위패" />
             <div class="label">
               <p>위패 극락왕생 흑백<br />(단면)</p>
