--- a/src/header.html
+++ b/src/header.html
@@ -256,9 +256,9 @@
           <a href="#">출력물 소개</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
-              <li><a href="./output.html">연등꼬리표</a></li>
-              <li><a href="./output.html">위패</a></li>
-              <li><a href="./output.html">출력물</a></li>
+              <li><a href="./output.html?tab=item1">연등꼬리표</a></li>
+              <li><a href="./output.html?tab=item2">위패</a></li>
+              <li><a href="./output.html?tab=item3">출력물</a></li>
             </ul>
           </div>
         </li>
@@ -317,9 +317,9 @@
             <a href="#">출력물 소개</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
-                <li><a href="./output.html">연등꼬리표</a></li>
-                <li><a href="./output.html">위패</a></li>
-                <li><a href="./output.html">출력물</a></li>
+                <li><a href="./output.html?tab=item1">연등꼬리표</a></li>
+                <li><a href="./output.html?tab=item2">위패</a></li>
+                <li><a href="./output.html?tab=item3">출력물</a></li>
               </ul>
             </div>
           </li>
