feat : 출력물 모달창 추가하다

--- a/output.html
+++ b/output.html
@@ -70,27 +70,33 @@
             </div>
 
             <dialog class="modal">
-              <h3>연등꼬리표</h3>
-              <p>
-                연등 양면 꼬리표 양식입니다. 한 장을 찍어낸 다음 접어서 양면으로
-                보실 수 있는 연등꼬리표로 높은 법당을 갖고 계신 사찰에 유용할
-                것입니다. 가족등, 개인등을 찍을 수 있습니다. ※ 1박스 : 500매 ※
-                사이즈 : 폭 19cm x 높이 22.4cm
-              </p>
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>연등꼬리표</h3>
+                </div>
 
-              <div class="img-content">
-                <img
-                  src="./img/output/modal/modal-content-1-1.png"
-                  alt="연등꼬리표"
-                />
-                <img
-                  src="./img/output/modal/modal-content-1-2.png"
-                  alt="연등꼬리표"
-                />
-                <img
-                  src="./img/output/modal/modal-content-1-3.png"
-                  alt="연등꼬리표"
-                />
+                <p class="modal-content-text">
+                  연등 양면 꼬리표 양식입니다. <br />
+                  한 장을 찍어낸 다음 접어서 양면으로 보실 수 있는 연등꼬리표로
+                  높은 법당을 갖고 계신 사찰에 유용할 것입니다.<br />
+                  가족등, 개인등을 찍을 수 있습니다.<br />※ 1박스 : 500매<br />※
+                  사이즈 : 폭 19cm x 높이 22.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-1-1.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-1-2.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-1-3.png"
+                    alt="연등꼬리표"
+                  />
+                </div>
               </div>
             </dialog>
           </div>
@@ -192,5 +198,6 @@
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
     <script src="./js/output.js"></script>
+    <script src="./js/output2.js"></script>
   </body>
 </html>
