feat : 출력물 모달 완료하다

--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
                 <img
                   src="./img/output/output-cate2-item2.png"
                   alt="위패 극락왕생 흑백"
+                  style="filter: grayscale(100%)"
                 />
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">위패 극락왕생 흑백</p>
