--- a/output.html
+++ b/output.html
@@ -68,7 +68,6 @@
               <p>연등 꼬리표 노란색<br />(양면)</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
-
             <dialog class="modal">
               <div class="modal-content">
                 <div class="modal-header">
@@ -123,6 +122,31 @@
               <p>연등 꼬리표 비닐 커버</p>
               <p>폭 19cm x 높이 22.4cm</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>비닐커버</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  연등꼬리표 비닐입니다.<br />
+                  양면, 단면, 영가등 꼬리표에 사용 가능합니다.<br />※
+                  1박스(비닐/집게세트) : 500매<br />※ 사이즈 : 폭 10.5cm x 높이
+                  26cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-4-1.png"
+                    alt="연등꼬리표 비닐"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-4-2.png"
+                    alt="연등꼬리표 비닐"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
 
@@ -137,11 +161,40 @@
           </div>
 
           <div style="background-color: #f2f2f2">
-            <img src="./img/output/output-cate2-item2.png" alt="위패" />
+            <img
+              src="./img/output/output-cate2-item2.png"
+              alt="위패"
+              style="filter: grayscale(100%)"
+            />
             <div class="label">
               <p>위패 극락왕생 흑백<br />(단면)</p>
               <p>폭 6cm x 높이 14.4cm</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>위패</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  위패 A4 양식입니다.<br />
+                  한 위패에 영가 네 분까지 모실 수 있습니다.<br />
+                  백중 때 가장 많이 쓰입니다.<br />※ 1박스 : 500매(1매에
+                  10위패)<br />※ 1위패 ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-3-1.png"
+                    alt="위패"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-3-2.png"
+                    alt="위패"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
 
@@ -152,6 +205,22 @@
             <div class="label">
               <p>기부금 영수증</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">기부금영수증 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item1.png"
+                    alt="기부금영수증"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div>
@@ -159,6 +228,19 @@
             <div class="label">
               <p>축원문</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">축원문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img src="./img/output/output-cate3-item2.png" alt="축원문" />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div>
@@ -166,6 +248,19 @@
             <div class="label">
               <p>천혼문</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">천혼문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img src="./img/output/output-cate3-item3.png" alt="천혼문" />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div>
@@ -173,6 +268,22 @@
             <div class="label">
               <p>축원 + 천혼</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">축원 + 천혼 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item4.png"
+                    alt="축원 + 천혼"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div>
@@ -180,6 +291,22 @@
             <div class="label">
               <p>영가 천혼문</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">영가 천혼문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item5.png"
+                    alt="영가 천혼문"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
 
           <div>
@@ -187,6 +314,22 @@
             <div class="label">
               <p>제사 위패</p>
             </div>
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">제사 위패 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item6.png"
+                    alt="제사 위패"
+                  />
+                </div>
+              </div>
+            </dialog>
           </div>
         </div>
       </section>
