--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
 
       <!-- 3. 수비라 출력물 안내 -->
       <section class="print-area">
-        <h3 class="title">수비라 출력물 안내 <a href="#">더보기</a></h3>
+        <h3 class="title">
+          수비라 출력물 안내 <a href="./output.html">더보기</a>
+        </h3>
         <p class="sub-title">
           수비라에서는 접수된 기도의 다양한 출력을 지원합니다.
         </p>
@@ -397,9 +399,7 @@
         </ul>
 
         <div class="portfolio-btn-area">
-          <a class="portfolio-btn">
-            더보기 <img src="./img/index/icon-more.png" alt="더보기" />
-          </a>
+          <a class="portfolio-btn"> 더보기 </a>
         </div>
       </section>
 
@@ -408,7 +408,7 @@
         <h3 class="title blind">문의 및 상담</h3>
 
         <div class="counsel-area">
-          <a href="#">
+          <a href="./contact-us.html">
             <img src="./img/icon-mail.png" alt="상담신청하기 아이콘" />
             <p>상담 신청하기</p>
             <img
