feat : 문의하기 링크 추가하다

--- a/src/header.html
+++ b/src/header.html
@@ -343,7 +343,7 @@
         </ul>
 
         <div class="counsel-area">
-          <a href="#">
+          <a href="./contact-us.html">
             <img src="./img/icon-mail.png" alt="상담신청하기 아이콘" />
             <p>상담 신청하기</p>
             <img
