--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
 
       <!-- 4. 사찰 홈페이지 제작 -->
       <section class="portfolio-area">
-        <h3 class="title">사찰 홈페이지 제작 <a href="#">더보기</a></h3>
+        <h3 class="title">
+          사찰 홈페이지 제작 <a href="./portfolio.html">더보기</a>
+        </h3>
         <p class="sub-title">
           사찰을 잘아는 수비라가 만드는 사찰 홈페이지는 다릅니다.
         </p>
@@ -399,7 +401,7 @@
         </ul>
 
         <div class="portfolio-btn-area">
-          <a class="portfolio-btn"> 더보기 </a>
+          <a class="portfolio-btn" href="./portfolio.html"> 더보기 </a>
         </div>
       </section>
 
