--- a/src/header.html
+++ b/src/header.html
@@ -266,7 +266,7 @@
           <a href="#">사찰 홈페이지 제작</a>
           <div class="gnb-sub-menu-area">
             <ul class="gnb-sub-menu">
-              <li><a href="#">포트폴리오</a></li>
+              <li><a href="./portfolio.html">포트폴리오</a></li>
               <li><a href="./production-guide.html">제작안내</a></li>
             </ul>
           </div>
@@ -327,7 +327,7 @@
             <a href="#">사찰 홈페이지 제작</a>
             <div class="modal-gnb-sub-menu-area">
               <ul class="modal-gnb-sub-menu">
-                <li><a href="#">포트폴리오</a></li>
+                <li><a href="./portfolio.html">포트폴리오</a></li>
                 <li><a href="./production-guide.html">제작안내</a></li>
               </ul>
             </div>
