--- a/portfolio.html
+++ b/portfolio.html
@@ -50,223 +50,208 @@
         <h3 class="title">포트폴리오</h3>
 
         <ul class="portfolio-list">
-          <!-- 송광사 -->
+          <!-- 1.송광사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/송광사.png" alt="송광사" />
+              <img src="./img/portfolio/item1.png" alt="송광사" />
             </div>
             <p>송광사</p>
           </li>
 
-          <!-- 능인 대학원 대학교 -->
+          <!-- 2.능인 대학원 대학교 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img
-                src="./img/portfolio/능인대학원대학교.png"
-                alt="능인 대학원 대학교"
-              />
+              <img src="./img/portfolio/item2.png" alt="능인 대학원 대학교" />
             </div>
             <p>능인 대학원 대학교</p>
           </li>
 
-          <!-- 명상상담평생교육원 -->
+          <!-- 3.명상상담평생교육원 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img
-                src="./img/portfolio/명상상담평생교육원.png"
-                alt="명상상담평생교육원"
-              />
+              <img src="./img/portfolio/item3.png" alt="명상상담평생교육원" />
             </div>
             <p>명상상담평생교육원</p>
           </li>
 
-          <!-- 대한불교 조계종 모바일 신도증 -->
+          <!-- 4. 대한불교 조계종 모바일 신도증 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
               <img
-                src="./img/portfolio/대한불교조계종모바일신도증.png"
+                src="./img/portfolio/item4.png"
                 alt="대한불교 조계종 모바일 신도증"
               />
             </div>
             <p>대한불교 조계종 모바일 신도증</p>
           </li>
 
-          <!-- 도반문자 -->
+          <!-- 5. 도반문자 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/도반문자.png" alt="도반문자" />
+              <img src="./img/portfolio/item5.png" alt="도반문자" />
             </div>
             <p>도반문자</p>
           </li>
 
-          <!-- 템플스테이 웹진 -->
+          <!-- 6. 템플스테이 웹진 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img
-                src="./img/portfolio/템플스테이웹진.png"
-                alt="템플스테이 웹진"
-              />
+              <img src="./img/portfolio/item6.png" alt="템플스테이 웹진" />
             </div>
             <p>템플스테이 웹진</p>
           </li>
 
-          <!-- 은암문화재단법인 -->
+          <!-- 7. 은암문화재단법인 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img
-                src="./img/portfolio/은암문화재단법인.png"
-                alt="은암문화재단법인"
-              />
+              <img src="./img/portfolio/item7.png" alt="은암문화재단법인" />
             </div>
             <p>은암문화재단법인</p>
           </li>
 
-          <!-- 수원시지역사회보장협의체 -->
+          <!-- 8.수원시지역사회보장협의체 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
               <img
-                src="./img/portfolio/수원시지역사회보장협의체.png"
+                src="./img/portfolio/item8.png"
                 alt="수원시지역사회보장협의체"
               />
             </div>
             <p>수원시지역사회보장협의체</p>
           </li>
 
-          <!-- 봉녕사 -->
+          <!-- 9. 봉녕사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/봉녕사.png" alt="봉녕사" />
+              <img src="./img/portfolio/item9.png" alt="봉녕사" />
             </div>
             <p>봉녕사</p>
           </li>
 
-          <!-- 청계사 -->
+          <!-- 10. 청계사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/청계사.png" alt="청계사" />
+              <img src="./img/portfolio/item10.png" alt="청계사" />
             </div>
             <p>청계사</p>
           </li>
 
-          <!-- 생명나눔실천본부 -->
+          <!-- 11. 생명나눔실천본부 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img
-                src="./img/portfolio/생명나눔실천본부.png"
-                alt="생명나눔실천본부"
-              />
+              <img src="./img/portfolio/item11.png" alt="생명나눔실천본부" />
             </div>
             <p>생명나눔실천본부</p>
           </li>
 
-          <!-- 개운사 -->
+          <!-- 12. 개운사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/개운사.png" alt="개운사" />
+              <img src="./img/portfolio/item12.png" alt="개운사" />
             </div>
             <p>개운사</p>
           </li>
 
-          <!-- 관문사 -->
+          <!-- 13. 관문사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/관문사.png" alt="관문사" />
+              <img src="./img/portfolio/item13.png" alt="관문사" />
             </div>
             <p>관문사</p>
           </li>
 
-          <!-- 구룡사 -->
+          <!-- 14. 구룡사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/구룡사.png" alt="구룡사" />
+              <img src="./img/portfolio/item14.png" alt="구룡사" />
             </div>
             <p>구룡사</p>
           </li>
 
-          <!-- 김포 용화사 -->
+          <!-- 15. 김포 용화사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/김포용화사.png" alt="김포 용화사" />
+              <img src="./img/portfolio/item15.png" alt="김포 용화사" />
             </div>
             <p>김포 용화사</p>
           </li>
 
-          <!-- 파주 보광사 -->
+          <!-- 16. 파주 보광사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/파주보광사.png" alt="파주 보광사" />
+              <img src="./img/portfolio/item16.png" alt="파주 보광사" />
             </div>
             <p>파주 보광사</p>
           </li>
 
-          <!-- 행불선원 -->
+          <!-- 17. 행불선원 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/행불선원.png" alt="행불선원" />
+              <img src="./img/portfolio/item17.png" alt="행불선원" />
             </div>
             <p>행불선원</p>
           </li>
 
-          <!-- 내원사 -->
+          <!-- 18. 내원사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/내원사.png" alt="내원사" />
+              <img src="./img/portfolio/item18.png" alt="내원사" />
             </div>
             <p>내원사</p>
           </li>
 
-          <!-- 동림선원 -->
+          <!-- 19. 동림선원 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/동림선원.png" alt="동림선원" />
+              <img src="./img/portfolio/item19.png" alt="동림선원" />
             </div>
             <p>동림선원</p>
           </li>
 
-          <!-- 명상지도자협회 -->
+          <!-- 20. 명상지도자협회 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
               <img
-                src="./img/portfolio/명상지도자협회.png"
+                src="./img/portfolio/item20.png"
                 alt="명상지도자협회"
               />
             </div>
             <p>명상지도자협회</p>
           </li>
 
-          <!-- 사회복지원각 -->
+          <!-- 21. 사회복지원각 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/사회복지원각.png" alt="사회복지원각" />
+              <img src="./img/portfolio/item21.png" alt="사회복지원각" />
             </div>
             <p>사회복지원각</p>
           </li>
 
-          <!-- 반야사 -->
+          <!-- 22. 반야사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/반야사.png" alt="반야사" />
+              <img src="./img/portfolio/item22.png" alt="반야사" />
             </div>
             <p>반야사</p>
           </li>
 
-          <!-- 보현선원 -->
+          <!-- 23. 보현선원 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/보현선원.png" alt="보현선원" />
+              <img src="./img/portfolio/item23.png" alt="보현선원" />
             </div>
             <p>보현선원</p>
           </li>
 
-          <!-- 지장선원 -->
+          <!-- 24. 지장선원 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/지장선원.png" alt="지장선원" />
+              <img src="./img/portfolio/item24.png" alt="지장선원" />
             </div>
             <p>지장선원</p>
           </li>
 
-          <!-- 봉인사 -->
+          <!-- 25. 봉인사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
               <img src="./img/portfolio/봉인사.png" alt="봉인사" />
@@ -274,10 +259,10 @@
             <p>봉인사</p>
           </li>
 
-          <!-- 부석사 -->
+          <!-- 26. 부석사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/부석사.png" alt="부석사" />
+              <img src="./img/portfolio/item26.png" alt="부석사" />
             </div>
             <p>부석사</p>
           </li>
