fix : 이미지 파일명 수정하다

--- a/portfolio.html
+++ b/portfolio.html
@@ -254,7 +254,7 @@
           <!-- 25. 봉인사 -->
           <li class="portfolio-item">
             <div class="portfolio-item-img">
-              <img src="./img/portfolio/봉인사.png" alt="봉인사" />
+              <img src="./img/portfolio/item25.png" alt="봉인사" />
             </div>
             <p>봉인사</p>
           </li>
