feat : 포트폴리오 모달 추가하다

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,32 @@
               <img src="./img/portfolio/item1.png" alt="송광사" />
             </div>
             <p>송광사</p>
+
+            <dialog class="modal">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>송광사</h3>
+                </div>
+
+                <div class="modal-content-text">
+                  <dl>
+                    <dt>사이트 바로가기</dt>
+                    <dd>
+                      <a href="https://www.songgwangsa.org" target="_blank"
+                        >www.songgwangsa.org</a
+                      >
+                    </dd>
+                    <dt>제작방식</dt>
+                    <dd>PC 홈페이지 제작</dd>
+                  </dl>
+                </div>
+
+                <div class="img-content">
+                  <img src="./img/portfolio/modal/item1-1.png" alt="송광사" />
+                  <img src="./img/portfolio/modal/item1-2.png" alt="송광사" />
+                </div>
+              </div>
+            </dialog>
           </li>
 
           <!-- 2.능인 대학원 대학교 -->
@@ -275,5 +301,6 @@
     <!-- JavaScript -->
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
