--- a/output.html
+++ b/output.html
@@ -341,6 +341,6 @@
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
     <script src="./js/output.js"></script>
-    <script src="./js/output2.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
