--- a/contact-us.html
+++ b/contact-us.html
@@ -277,6 +277,31 @@
           </div>
         </form>
       </section>
+
+      <dialog class="modal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="blind">문의 확인 - 등록완료</h3>
+          </div>
+
+          <div class="modal-content-text">
+            <p class="notice-text">
+              필수 항목이 입력되어야<br />
+              문의가 가능합니다.
+            </p>
+
+            <p class="confirm-text">
+              문의가 접수 되었습니다.<br />
+              담당자가 확인 후 연락드리겠습니다.<br />
+              감사합니다.<br />
+            </p>
+          </div>
+
+          <div>
+            <button type="button" class="btn btn--confirm">확인</button>
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <footer id="footer"></footer>
