feat : 문의하기 필수요소 체크하기 js 코드 추가하다

--- a/contact-us.html
+++ b/contact-us.html
@@ -212,7 +212,7 @@
 
           <!-- 개인정보 동의 -->
           <div class="form-row bordered-bottom privacy">
-            <label for="content" class="form-label h-100"
+            <label for="content" class="form-label required h-100"
               >개인정보 수집 및<br class="pc-only" />이용 동의 안내
             </label>
             <div class="form-content">
@@ -241,7 +241,6 @@
                       name="agree"
                       value="agree-yes"
                       class="blind"
-                      checked
                     />
                     <label class="radio" for="agree-yes">
                       <span>동의합니다.</span>
@@ -255,6 +254,7 @@
                       name="agree"
                       value="agree-no"
                       class="blind"
+                      checked
                     />
                     <label class="radio" for="agree-no">
                       <span>동의하지 않습니다.</span>
@@ -284,18 +284,7 @@
             <h3 class="blind">문의 확인 - 등록완료</h3>
           </div>
 
-          <div class="modal-content-text">
-            <p class="notice-text">
-              필수 항목이 입력되어야<br />
-              문의가 가능합니다.
-            </p>
-
-            <p class="confirm-text">
-              문의가 접수 되었습니다.<br />
-              담당자가 확인 후 연락드리겠습니다.<br />
-              감사합니다.<br />
-            </p>
-          </div>
+          <div class="modal-content-text"></div>
 
           <div>
             <button type="button" class="btn btn--confirm">확인</button>
