fix : index swiper 내 자세히 보기 수정하다

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/output-swiper.js"></script>
+    <script src="./js/swiper.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
   </body>
