fix : index 출력물 소개 모달 추가하다

--- a/portfolio.html
+++ b/portfolio.html
@@ -1060,6 +1060,6 @@
     <!-- JavaScript -->
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
-    <script src="./js/modal.js"></script>
+    <script src="./js/portfolio.js"></script>
   </body>
 </html>
