--- a/index.html
+++ b/index.html
@@ -209,6 +209,35 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>연등꼬리표</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  연등 양면 꼬리표 양식입니다. <br />
+                  한 장을 찍어낸 다음 접어서 양면으로 보실 수 있는 연등꼬리표로
+                  높은 법당을 갖고 계신 사찰에 유용할 것입니다.<br />
+                  가족등, 개인등을 찍을 수 있습니다.<br />※ 1박스 : 500매<br />※
+                  사이즈 : 폭 19cm x 높이 22.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-1-1.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-1-2.png"
+                    alt="연등꼬리표"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-1-3.png"
+                    alt="연등꼬리표"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 연등 꼬리표 분홍색 -->
@@ -243,6 +272,48 @@
               </div>
             </div>
 
+            <div
+              class="swiper-slide"
+              style="border-radius: 20px; border: 1px solid #ccc"
+            >
+              <div>
+                <img
+                  src="./img/output/output-cate1-item4.png"
+                  alt="연등 꼬리표 비닐 커버"
+                />
+                <div class="print-cate-text">
+                  <p class="print-cate-text-title">
+                    연등 꼬리표<br />비닐 커버
+                  </p>
+                  <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
+              </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>비닐커버</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  연등꼬리표 비닐입니다.<br />
+                  양면, 단면, 영가등 꼬리표에 사용 가능합니다.<br />※
+                  1박스(비닐/집게세트) : 500매<br />※ 사이즈 : 폭 10.5cm x 높이
+                  26cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-4-1.png"
+                    alt="연등꼬리표 비닐"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-4-2.png"
+                    alt="연등꼬리표 비닐"
+                  />
+                </div>
+              </div>
+            </div>
+
             <!-- 위패 극락왕생 컬러 -->
             <div class="swiper-slide" style="background-color: #cdebd9">
               <div>
@@ -272,6 +343,30 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>위패</h3>
+                </div>
+
+                <p class="modal-content-text">
+                  위패 A4 양식입니다.<br />
+                  한 위패에 영가 네 분까지 모실 수 있습니다.<br />
+                  백중 때 가장 많이 쓰입니다.<br />※ 1박스 : 500매(1매에
+                  10위패)<br />※ 1위패 ※ 사이즈 : 폭 3.6cm x 높이 14.4cm
+                </p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/modal/modal-content-3-1.png"
+                    alt="위패"
+                  />
+                  <img
+                    src="./img/output/modal/modal-content-3-2.png"
+                    alt="위패"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 기부금 영수증 -->
@@ -286,6 +381,21 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">기부금영수증 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item1.png"
+                    alt="기부금영수증"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 축원문 -->
@@ -297,6 +407,18 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">축원문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img src="./img/output/output-cate3-item2.png" alt="축원문" />
+                </div>
+              </div>
             </div>
 
             <!-- 천혼문 -->
@@ -306,6 +428,18 @@
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">천혼문</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
+              </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">천혼문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img src="./img/output/output-cate3-item3.png" alt="천혼문" />
                 </div>
               </div>
             </div>
@@ -322,6 +456,21 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">축원 + 천혼 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item4.png"
+                    alt="축원 + 천혼"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 영가 천혼문 -->
@@ -336,6 +485,21 @@
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
                 </div>
               </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">영가 천혼문 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item5.png"
+                    alt="영가 천혼문"
+                  />
+                </div>
+              </div>
             </div>
 
             <!-- 제사 위패 -->
@@ -348,6 +512,21 @@
                 <div class="print-cate-text">
                   <p class="print-cate-text-title">제사 위패</p>
                   <p class="print-cate-text-size">폭 19cm x 높이 22.4cm</p>
+                </div>
+              </div>
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h3>출력물</h3>
+                </div>
+
+                <p class="modal-content-text">제사 위패 출력물입니다.</p>
+
+                <div class="img-content">
+                  <img
+                    src="./img/output/output-cate3-item6.png"
+                    alt="제사 위패"
+                  />
                 </div>
               </div>
             </div>
@@ -421,6 +600,9 @@
           <p>연락처를 남겨주시면 확인 후 빠르게 연락드리겠습니다:)</p>
         </div>
       </section>
+
+      <!-- 모달 -->
+      <dialog class="modal"></dialog>
     </main>
 
     <footer id="footer"></footer>
@@ -430,5 +612,6 @@
     <script src="./js/swiper.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/footer.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
