feat : 브랜드 스토리 검수 완료하다

--- a/brand-story.html
+++ b/brand-story.html
@@ -67,23 +67,22 @@
           <div class="char-box">首</div>
           <div class="char-title">수</div>
           <div class="meaning">
-            처음,<br class="mo-only" />
+            처음,<br />
             앞장서다
           </div>
         </div>
         <div class="story-content">
           <h3>
-            수비라는 사내 행정의 새로운 시작을 할 때,<b
-              >항상 맨 앞에서 이끌어주는 힘</b
-            >입니다.
+            수비라는 사찰이 새로운 길을 시작할 때,<br class="mo-only" />항상 맨
+            앞에서 이끌어주는 힘입니다.
           </h3>
           <dl>
             <dt>뜻</dt>
             <dd>머리, 으뜸, 시작</dd>
             <dt>스토리</dt>
-            <dd>사내 행정의 책임임을 짊어지고 이끄는 존재</dd>
+            <dd>사찰 행정의 첫걸음을 책임지고 이끄는 존재</dd>
             <dt>방향</dt>
-            <dd>총무행정의 중심이자 방향을 잡아주는 리디의 상징</dd>
+            <dd>종무행정의 중심이자 방향을 잡아주는 리더의 상징.</dd>
           </dl>
         </div>
       </section>
@@ -93,7 +92,7 @@
           <div class="char-box">飛</div>
           <div class="char-title">비</div>
           <div class="meaning">
-            날다,<br class="mo-only" />
+            날다,<br />
             앞으로<br class="mo-only" />
             나아가다
           </div>
@@ -118,11 +117,15 @@
         <div class="korean-character">
           <div class="char-box">羅</div>
           <div class="char-title">라</div>
-          <div class="meaning">그물, <br class="mo-only" />펼쳐놓다</div>
+          <div class="meaning">
+            그물,<br class="mo-only" />
+            연결,<br class="mo-only" />
+            펼침
+          </div>
         </div>
         <div class="story-content">
           <h3>
-            수비라는 사내의 모든 일을 하나로 모아
+            수비라는 사찰의 모든 일을 하나로 모아
             <b>유기적이고 조화로운 운영을 실현</b>합니다.
           </h3>
           <dl>
