fix : 주요 기능 검수 완료하다

--- a/main-features.html
+++ b/main-features.html
@@ -176,13 +176,13 @@
               <ul class="benefit-grid-item">
                 <li>
                   수기가 아닌 입력 데이터에 의한 자동 전산화 시스템으로 금전
-                  관련 누락 및 오류 해소, 사찰 재정 운영 및 관리가 투명해지고 손
-                  쉬어짐
+                  관련 누락 및 오류 해소,<br class="pc-only" />
+                  사찰 재정 운영 및 관리가 투명해지고 손 쉬어짐
                 </li>
                 <li>
                   지리적 여건, 신도의 개인적 사정 등 기도 및 법회 참가자가 적은
-                  사찰들도 정기적인 기도비와 인등비를 자동 출금 이체 서비스에
-                  등록하여 사찰의 전반적인 재정 극대화
+                  사찰들도 정기적인 기도비와 인등비를<br class="pc-only" />
+                  자동 출금 이체 서비스에 등록하여 사찰의 전반적인 재정 극대화
                 </li>
               </ul>
             </div>
