fix : 도입효과 검수 완료하다

--- a/introduction-effect.html
+++ b/introduction-effect.html
@@ -99,7 +99,8 @@
               <ul>
                 <li>신도 데이터의 정확성과 보안성 확보</li>
                 <li>
-                  이름, 연락처, 기도·참여 이력 등 신도 정보를 정확하게 관리
+                  이름, 연락처, 기도·참여 이력 등 신도 정보를<br />
+                  정확하게 관리
                 </li>
                 <li>
                   은행 수준의 보안과 주기적인 자동 백업 담당자 교체 시에도 업무
@@ -191,9 +192,9 @@
             불교의 성장 엔진으로 거듭날 수 있습니다.
           </p>
           <p>
-            수비라 신도관리프로그램은 이 모든 목표를<br class="mo-only" />한
-            번의 클릭으로 지원합니다.<br />오늘 바로, 사찰의 업무 환경을 바꾸는
-            ‘첫걸음의 새로운 기회'가 시길 바랍니다.<br />
+            수비라 신도관리프로그램은 이 모든 목표를<br class="mo-only" />
+            한 번의 클릭으로 지원합니다.<br />오늘 바로, 사찰의 업무 환경을
+            바꾸는 ‘첫걸음의 새로운 기회'가 되시길 바랍니다.<br />
           </p>
         </div>
       </section>
