fix : 보안 및 안정성 검수 완료하다

--- a/security-stability.html
+++ b/security-stability.html
@@ -181,8 +181,8 @@
                 <dt>이중 암호화 + 접근 권한 관리</dt>
                 <dd>
                   모든 데이터는 저장 전 암호화, 전송 중 암호화가 이중으로
-                  적용됩니다. <br />또한 접속자에 따라 볼 수 있는 기능을
-                  제한하여 실수나 외부 노출을 막습니다.
+                  적용됩니다. <br class="pc-only" />또한 접속자에 따라 볼 수
+                  있는 기능을 제한하여 실수나 외부 노출을 막습니다.
                 </dd>
               </dl>
             </li>
