fix : 제작안내 검수 완료하다

--- a/production-guide.html
+++ b/production-guide.html
@@ -185,7 +185,8 @@
               대표 전화 번호 <a href="tel:0267485212">02-6748-5212</a> /<br
                 class="mo-only"
               />
-              수비라 상담 내선 (1)번, 홈페이지 제작 내선 (2)번
+              수비라 상담 내선 (1)번,<br class="mo-only" />
+              홈페이지 제작 내선 (2)번
             </p>
           </div>
         </div>
