fix : 포트폴리오 링크 수정하다

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.songgwangsa.org" target="_blank"
+                      <a href="http://www.songgwangsa.org" target="_blank"
                         >www.songgwangsa.org</a
                       >
                     </dd>
@@ -304,7 +304,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.eunam.or.kr" target="_blank"
+                      <a href="http://www.eunam.or.kr" target="_blank"
                         >www.eunam.or.kr</a
                       >
                     </dd>
@@ -426,7 +426,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.chungkeisa.com" target="_blank"
+                      <a href="http://www.chungkeisa.com" target="_blank"
                         >www.chungkeisa.com</a
                       >
                     </dd>
@@ -504,7 +504,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.gaeunsa.org" target="_blank"
+                      <a href="http://www.gaeunsa.org" target="_blank"
                         >www.gaeunsa.org</a
                       >
                     </dd>
@@ -572,7 +572,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.guryongsa.net" target="_blank"
+                      <a href="http://www.guryongsa.net" target="_blank"
                         >www.guryongsa.net</a
                       >
                     </dd>
@@ -605,7 +605,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.kimpoyhs.com" target="_blank"
+                      <a href="http://www.kimpoyhs.com" target="_blank"
                         >www.kimpoyhs.com</a
                       >
                     </dd>
@@ -645,7 +645,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.bokwangsa.net" target="_blank"
+                      <a href="http://www.bokwangsa.net" target="_blank"
                         >www.bokwangsa.net</a
                       >
                     </dd>
@@ -685,7 +685,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.haengbul.co.kr" target="_blank"
+                      <a href="http://www.haengbul.co.kr" target="_blank"
                         >www.haengbul.co.kr</a
                       >
                     </dd>
@@ -725,7 +725,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.naewon.or.kr" target="_blank"
+                      <a href="http://www.naewon.or.kr" target="_blank"
                         >www.naewon.or.kr</a
                       >
                     </dd>
@@ -760,7 +760,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.dongrim.org" target="_blank"
+                      <a href="http://www.dongrim.org" target="_blank"
                         >www.dongrim.org</a
                       >
                     </dd>
@@ -847,7 +847,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.wongakwel.org" target="_blank"
+                      <a href="http://www.wongakwel.org" target="_blank"
                         >www.wongakwel.org</a
                       >
                     </dd>
@@ -887,7 +887,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.banyatemple.co.kr" target="_blank"
+                      <a href="http://www.banyatemple.co.kr" target="_blank"
                         >www.banyatemple.co.kr</a
                       >
                     </dd>
@@ -921,7 +921,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.bohyunseonwon.org" target="_blank"
+                      <a href="http://www.bohyunseonwon.org" target="_blank"
                         >www.bohyunseonwon.org</a
                       >
                     </dd>
@@ -961,7 +961,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.abccenter.co.kr" target="_blank"
+                      <a href="http://www.abccenter.co.kr" target="_blank"
                         >www.abccenter.co.kr</a
                       >
                     </dd>
@@ -1001,7 +1001,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.bonginsa.net" target="_blank"
+                      <a href="http://www.bonginsa.net" target="_blank"
                         >www.bonginsa.net
                       </a>
                     </dd>
@@ -1035,7 +1035,7 @@
                   <dl>
                     <dt>사이트 바로가기</dt>
                     <dd>
-                      <a href="https://www.pusoksa.org" target="_blank"
+                      <a href="http://www.pusoksa.org" target="_blank"
                         >www.pusoksa.org
                       </a>
                     </dd>
